--- a/Registration/package.json
+++ b/Registration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "internship",
+  "name": "registration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^2.0.0-beta.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^5.0.0-beta.2",
     "mongoose": "^8.2.2"
   }
 }
